--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<body>
 		<div class="box">
-			<h1>Justin Dizon</h1>
+			<h1>Rook Dizon</h1>
 
 			<p>
 				<i>Aspiring Web Developer</i>
@@ -52,7 +52,7 @@
 			<br />
 			<br />
 			<br />
-			
+
 			<a href="http://github.com/grandtheft-spaceship">
 				<img src="git_logo.png"/>
 			</a>
